[gd_scene load_steps=2 format=3 uid="uid://blt80r8f1qt8w"]

[ext_resource type="Script" path="res://Scripts/UI/settings_menu.gd" id="1_bd26g"]

[node name="SettingsMenu" type="Popup"]
initial_position = 1
size = Vector2i(920, 580)
visible = true
script = ExtResource("1_bd26g")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.233925, 0.233925, 0.233925, 0.705882)

[node name="SettingsTabs" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Video" type="TabBar" parent="SettingsTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
layout_mode = 0
offset_right = 55.0
offset_bottom = 23.0

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
layout_mode = 2

[node name="DisplayModLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Fullscreen
"

[node name="FullscreenButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Vsync
"

[node name="VsyncButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="DisplayFPSLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Display FPS"

[node name="DisplayFPSButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="MaxFPSLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Max FPS"

[node name="MaxFPSOptions" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="MaxFPSVal" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/MaxFPSOptions"]
layout_mode = 2
text = "Max"

[node name="MaxFPSSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/MaxFPSOptions"]
layout_mode = 2
max_value = 144.0
value = 1.0

[node name="BloomLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Bloom"

[node name="BloomButton" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2

[node name="BrightnessLabel" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
layout_mode = 2
text = "Brightness
"

[node name="BrightnessSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
visible = false
layout_mode = 2

[node name="Audio" type="TabBar" parent="SettingsTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
layout_mode = 2

[node name="MasterVol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Master Volume"

[node name="MasterVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[node name="MusicVol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "Music Volume
"

[node name="MusicVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[node name="SfxVol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
layout_mode = 2
min_value = -50.0
max_value = 50.0

[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/VsyncButton" to="." method="_on_vsync_button_toggled"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/BloomButton" to="." method="_on_bloom_button_toggled"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MasterVolSlider" to="." method="_on_master_vol_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/SfxVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
